--- a/landing-page.html
+++ b/landing-page.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="en">
 
-
-<!-- Mirrored from htmldemo.net/streamo/streamo/landing-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Nov 2022 08:44:23 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -55,11 +53,14 @@
         <div class="container">
             <div class="landing-hero-content text-center">
                 <h1 class="title">Endless movies, TV shows, and more.</h1>
-                <h4 class="sub-title">Enjoy anywhere. Unsubscribe anytime.</h4>
-                <p>Ready to watch? Enter your email to create or restart your membership.</p>
+                <h4 class="sub-title">Enjoy anywhere. Watch anytime.</h4>
+                <!-- <p>Ready to watch? Enter your email to create or restart your membership.</p> -->
                 <div class="create-membership-wrap">
-                    <input placeholder="Email Address">
-                    <button class="landing-btn-style" type="button">Get Started</button> 
+                    <div class="col mb-6">
+                        <div class="sign-in-up-btn-wrap">
+                            <a class="sign-in-up-btn-style" href="#!">Download Apk</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -69,8 +70,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-7">
                     <div class="movie-site-info-content info-width-1">
-                        <h2 class="title">Enjoy Watching Them on TV.</h2>
-                        <h3 class="sub-title">Whether it’s Smart TV, Xbox, Apply TV, Watch Your Favorite Program with Great Pleasure.</h3>
+                        <h2 class="title">Enjoy Watching Movies on TV.</h2>
+                        <h3 class="sub-title">Whether it’s Smart TV, phone, Watch Your Favorite Program with Great Pleasure.</h3>
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -86,25 +87,25 @@
             <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1">
                 <div class="col mb-30">
                     <div class="funfact-wrap text-center">
-                        <h2 class="value"><span class="odometer" data-count-to="500"></span>+ M</h2>
+                        <h2 class="value"><span class="odometer" data-count-to="4500"></span>+</h2>
                         <h3 class="title">Total Videos</h3>
                     </div>
                 </div>
                 <div class="col mb-30">
                     <div class="funfact-wrap text-center">
-                        <h2 class="value"><span class="odometer" data-count-to="10"></span>th</h2>
-                        <h3 class="title">Position</h3>
+                        <h2 class="value"><span class="odometer" data-count-to="1"></span>st</h2>
+                        <h3 class="title">People's Choice</h3>
                     </div>
                 </div>
                 <div class="col mb-30">
                     <div class="funfact-wrap text-center">
-                        <h2 class="value"><span class="odometer" data-count-to="200"></span>+ M</h2>
-                        <h3 class="title">Subscribers</h3>
+                        <h2 class="value"><span class="odometer" data-count-to="5000"></span>+</h2>
+                        <h3 class="title">Users</h3>
                     </div>
                 </div>
                 <div class="col mb-30">
                     <div class="funfact-wrap text-center">
-                        <h2 class="value"><span class="odometer" data-count-to="100"></span>+</h2>
+                        <h2 class="value"><span class="odometer" data-count-to="12"></span></h2>
                         <h3 class="title">Awards</h3>
                     </div>
                 </div>
@@ -128,7 +129,7 @@
             </div>
         </div>
     </div>
-    <div class="movie-site-info-wrap bg-black section-pt-90 section-pb-60">
+    <!-- <div class="movie-site-info-wrap bg-black section-pt-90 section-pb-60">
         <div class="container">
             <div class="section-title-5 text-center">
                 <h2 class="title">Pricing Plan</h2>
@@ -205,7 +206,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="movie-site-info-wrap bg-black-2 section-pt-90 section-pb-90">
         <div class="container">
             <div class="row align-items-center">
@@ -223,7 +224,7 @@
             </div>
         </div>
     </div>
-    <div class="movie-site-info-wrap bg-black section-pt-90 section-pb-90">
+    <!-- <div class="movie-site-info-wrap bg-black section-pt-90 section-pb-90">
         <div class="container">
             <div class="section-title-5 text-center">
                 <h2 class="title">Popular Movies And Shows </h2>
@@ -346,7 +347,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="movie-site-info-wrap bg-black-2 section-pt-90 section-pb-90">
         <div class="container">
             <div class="section-title-5 text-center">
@@ -574,5 +575,4 @@
 </body>
 
 
-<!-- Mirrored from htmldemo.net/streamo/streamo/landing-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Nov 2022 08:44:27 GMT -->
 </html>
